Remove old endpoint
